--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Setup Maven
         uses: stCarolas/setup-maven@v1
 
-#      - name: Creating a maven build
-#        run:  mvn clean package
+      - name: Creating a maven build
+        run:  mvn clean package
 
       - name: Running Test cases
         run:  mvn test
